--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "codegen:orval": "orval --config ./orval.config.cjs",
+    "compile:tsp": "tsp compile ."
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.11",
